fix map and charts width on mobile phone

--- a/src/App.css
+++ b/src/App.css
@@ -231,6 +231,7 @@ select {
   margin-left: 5%;
   flex-direction: column;
   align-items: center;
+  width: 100vw;
 }
 
 .mapsSection {
@@ -238,6 +239,7 @@ select {
   margin-top: 150px;
   margin-bottom: 25px;
   justify-content: center;
+  width: 100vw;
 }
 
 .singleResultSection {
